@@ -2134,7 +2134,7 @@ vm_create(void *arg)
     ruby_native_cond_signal(&args->waiting);
     ruby_native_thread_unlock(args->lock);
 
-    return (VALUE)ruby_vm_start(vm, status);
+    return (VALUE)ruby_vmptr_start(vm, status);
 }
 
 static VALUE
