@@ -1,3 +1,7 @@
+Thu Mar 18 14:54:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* eval.c (ruby_vmptr_start): renamed from ruby_vm_start.
+
 Thu Mar 18 13:21:56 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* thread_pthread.c (InitVM_native_thread), vm.c (vm_thread_new):
